workshop/observability/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paper-gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: minecraft
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: Same
    - name: argocd-https
      protocol: HTTPS
      port: 443
      hostname: argocd.badrchoubai.mc.labs.cmute.cloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: grafana-https
      protocol: HTTPS
      port: 443
      hostname: grafana.badrchoubai.mc.labs.cmute.cloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
      allowedRoutes:
        namespaces:
          from: All
